Added Java 23 features